# mb2-template

./: Cargo.toml  cargo-generate.toml
src/: main.rs
